--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 /* ----- Text and title ------ */
-.orange-text-title{
+.orange-text-title {
     color: var(--color-orange);
     font-family: "Hachi Maru Pop", cursive;
 }
@@ -26,9 +26,38 @@ body {
     font-family: "Hachi Maru Pop", cursive;
 }
 
+.blue-text-title {
+    color: var(--color-blue);
+    font-family: "Hachi Maru Pop", cursive;
+}
+
+.black-text-title {
+    color: var(--color-black);
+    font-family: "Hachi Maru Pop", cursive;
+}
+
+.black-text {
+    color: var(--color-black);
+    font-size: 20px;
+}
+
+.blue-text {
+    color: var(--color-blue);
+    font-size: 20px;
+}
+
 .white-text {
     color: var(--color-white);
     font-size: 20px;
+}
+
+/* ----- Background ----- */
+.light-blue-background {
+    background-color: var(--color-light-blue);
+}
+
+.white-background {
+    background-color: var(--color-white);
 }
 
 /* ----- Link ----- */
@@ -41,7 +70,7 @@ a:hover {
 }
 
 /* ----- Button ----- */
-.light-blue-btn{
+.light-blue-btn {
     background-color: var(--color-light-blue);
     color: var(--color-blue);
     font-family: "Hachi Maru Pop", cursive;
@@ -49,15 +78,34 @@ a:hover {
     height: 50px;
 }
 
-.light-blue-btn:hover{
+.light-blue-btn:hover {
     background-color: var(--color-orange);
     color: var(--color-white);
     font-family: "Hachi Maru Pop", cursive;
 }
 
 /* ----- Img ----- */
-.img-portrait{
+.img-portrait {
     max-height: 300px;
+}
+
+.decoration{
+    top:350px;
+}
+
+.diamond {
+    background-color: var(--color-blue);
+    width: 100px;
+    height: 100px;
+    transform: rotate(45deg);
+}
+
+.no-rotate {
+    transform: rotate(-45deg);
+}
+
+.rotate-45 {
+    transform: rotate(45deg);
 }
 
 /* ----- Header ------ */
